# cpparch

./: .clang-format  .clang-tidy  .clang-tidy-strict  .git-blame-ignore-revs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md
.claude/: settings.json
.claude/commands/: autocommit.md  backlog-review.md  checkpoint.md  ci-check.md  commit.md  create-task.md  findings.md  fix-issue.md  gh-issues.md  issue.md  status-review.md
.github/workflows/: ci.yml  example_archcheck_pr.yml  release.yml
analysis/: CORPUS_CRITERIA.md  README.md
analysis/agentic/: agent_author_scan.py  grow_corpus.py  screen_corpus.py
analysis/boolean_state/: bool_history_scan.py  broad_scan.py  extractor.py  perstruct_drift_all.py
analysis/crosslang/: aggregate.py  surge_scan.py
analysis/duplication/: classify_dup.py  control_measure.py  filtered_dup.py
analysis/graph_drift/: generate_per_commit_graph_drift.py  graph_metrics.py  make_window_baselines.py
analysis/lateral_drift/: agentic_normalized.py  before_after_probe.py  lateral_drift_scan.py  reclone_missing.py
analysis/local_complexity/: classify_findings.py  run_lcx_scan.py  (+2 more)
backlog/: DEBT.md  README.md  TASK_TRACKER.md  backlog_review.md
docs/: FABLE_5_IN_MEMORIAM.md  MVP.md  ROADMAP.md  STATUS.md  architecture-spec.md  baseline_format.md  ci_integration.md  ci_usage.md  code_quality.md  code_style.md  codex_archcheck_cheap_drift_tasks.md  codex_task_local_complexity_drift.md  config_format.md  duplication_architecture.md  duplication_fp_analysis.md  milestones.md  product_vision.md
experiments/: CONCRETE_EXAMPLES.md  CORPUS_FINDINGS.md  MANUAL_ANALYSIS.md  analysis_libresprite_duplication.md  complete_duplication_analysis.md  full_duplication_scan.txt
experiments/clang_perf/: .gitignore  CMakeLists.txt  README.md  main.cpp  regex_baseline.cpp
experiments/line_duplication/: CMakeLists.txt  LOCAL_SWEEP_REPORT.md  PERF.md  README.md  main.cpp
experiments/partial_duplication/: CMakeLists.txt  OSS_SWEEP_REPORT.md  README.md  SPIKE_REPORT.md  main.cpp
experiments/partial_duplication/cases/: acct.cpp  acct_copy.cpp  dispatch.cpp  filler.cpp  guards.cpp  shapes.cpp
experiments/partial_duplication/fixtures_clone_modules/licensing/: lic.cpp
experiments/partial_duplication/fixtures_clone_modules/navigation/: nav.cpp
experiments/partial_duplication/fixtures_clone_modules/weather/: wx.cpp
experiments/partial_duplication/fixtures_clone_type/: sample.cpp
reports/: clone_detection_comparison.md  nicad_only_authored_code.md  nicad_vs_archcheck.md
scripts/: bench_materialize.sh  check_coverage.sh  drift_run.sh
src/: CMakeLists.txt  main.cpp
src/cli/: check_command.cpp  check_command.h  diff_command.cpp  diff_command.h  preview_commands.cpp  preview_commands.h
src/config/: config_loader.cpp
src/diff/: diff_json_report.cpp  md_report.cpp  regression_report.cpp
src/git/: diff_query.cpp  git_exec.cpp  git_object_file_source.cpp  git_state.cpp  history_query.cpp
src/graph/: algorithms.cpp  baseline.cpp  dependency_graph.cpp  diff.cpp  graph_builder.cpp
src/report/: json_reporter.cpp  text_reporter.cpp  violation_baseline.cpp
src/rules/: drift_bidirectional_coupling.cpp  drift_lateral_module_dependency.cpp  drift_no_cycle_growth.cpp  drift_no_shortcut_edge.cpp  gate_policy.cpp  implicit_state_machine_growth.cpp  lakos_chain_length.cpp  lakos_god_headers.cpp  rule_set.cpp  sf7_using_namespace.cpp  sf8_include_guard.cpp  sf9_no_cycles.cpp
src/scan/: bool_field_drift.cpp  defect_attractor.cpp  disk_file_source.cpp  flag_argument_scan.cpp  function_body_scan.cpp  god_file_growth.cpp  include_resolver.cpp  include_scanner.cpp  local_complexity_drift.cpp  local_complexity_metrics.cpp  new_clone_drift.cpp  project_files.cpp  satd_scan.cpp  test_co_evolution.cpp
src/scan/duplication/: clone_classifier.cpp  clone_index.cpp  duplication_scanner.cpp  fp_corpus_eval.cpp  fragmenter.cpp  similarity.cpp  token_normalizer.cpp
tests/: CMakeLists.txt  duplication_clone_classifier_test.cpp  duplication_clone_index_test.cpp  duplication_fp_corpus_eval_test.cpp  duplication_fp_guards_test.cpp  duplication_fragmenter_test.cpp  duplication_path_guards_test.cpp  duplication_pmd_normalization_test.cpp  duplication_qt_p06_test.cpp  duplication_qt_slots_test.cpp  duplication_renamed_recall_test.cpp  duplication_similarity_test.cpp  duplication_synthetic_fp_test.cpp  duplication_thin_delegates_test.cpp  duplication_token_normalizer_test.cpp  flag_argument_scan_test.cpp  smoke_test.cpp
tests/integration/cli/: cli_smoke_e2e_test.cpp
tests/integration/diff/: diff_workflow_e2e_test.cpp  git_diff_test.cpp
tests/integration/graph/: end_to_end_test.cpp  vendor_exclude_test.cpp
tests/integration/rules/: drift_fixtures_test.cpp
tests/integration/scan/: bool_field_drift_fixtures_test.cpp  local_complexity_fixtures_test.cpp  scanner_fixtures_test.cpp
tests/unit/config/: test_loader.cpp
tests/unit/diff/: regression_report_test.cpp
tests/unit/git/: diff_query_test.cpp  git_object_file_source_test.cpp  git_state_test.cpp  history_query_test.cpp
tests/unit/graph/: algorithms_test.cpp  baseline_test.cpp  dependency_graph_test.cpp  diff_test.cpp  graph_builder_test.cpp
tests/unit/report/: json_escape_test.cpp  text_reporter_test.cpp  violation_baseline_test.cpp
tests/unit/rules/: drift_lateral_module_dependency_test.cpp  drift_no_cycle_growth_test.cpp  drift_no_shortcut_edge_test.cpp  gate_policy_test.cpp  implicit_state_machine_growth_test.cpp  lakos_chain_length_test.cpp  lakos_god_headers_test.cpp  sf7_using_namespace_test.cpp  sf8_include_guard_test.cpp  sf9_no_cycles_test.cpp
tests/unit/scan/: authored_scope_test.cpp  bool_field_drift_test.cpp  defect_attractor_test.cpp  file_classification_test.cpp  function_body_scan_test.cpp  god_file_growth_test.cpp  include_resolver_test.cpp  include_scanner_test.cpp  local_complexity_drift_test.cpp  local_complexity_metrics_test.cpp  new_clone_drift_test.cpp  project_files_test.cpp  satd_scan_test.cpp  test_co_evolution_test.cpp
(+750 files in other folders)
